trunk/salesforce.com-societies-oss/src/objects/Society__c.object
<CustomObject>
    <description>Societies Discussion Board</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Societies</relationshipLabel>
        <relationshipName>Societies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CombinedName__c</fullName>
        <description>This unique field prevents duplicate society names per account.</description>
        <label>Combined Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <summaryForeignKey>Comment__c.Society__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Managers__c</fullName>
        <label>Managers</label>
        <summaryForeignKey>SocietyManager__c.Society__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>235</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Public - Anyone can submit and/or comment.
Managed - Only managers can submit, but anyone can comment.
Private - Only managers can submit and/or comment.</description>
        <inlineHelpText>Public - Anyone can submit and/or comment.
Managed - Only managers can submit, but anyone can comment.
Private - Only managers can submit and/or comment.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Managed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Society</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Societies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>